--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
-        "mcamara/laravel-localization": "^1.3"
+        "mcamara/laravel-localization": "^1.3",
+        "stripe/stripe-php": "^7.27"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
